--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -37,7 +37,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>spring</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>*.mvc</url-pattern>
 	</servlet-mapping>
 
 	<!-- was jndi -->
