--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -39,6 +39,17 @@
 		<servlet-name>spring</servlet-name>
 		<url-pattern>*.mvc</url-pattern>
 	</servlet-mapping>
+	
+	
+	  <!-- 为了使用SpringMVC框架实现REST风格,需要配置  HiddenHttpMethodFilter-->  
+    <!-- <filter>  
+        <filter-name>hiddenHttpMethodFilter</filter-name>  
+        <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>  
+    </filter>  
+    <filter-mapping>  
+        <filter-name>hiddenHttpMethodFilter</filter-name>  
+        <url-pattern>/*</url-pattern>  
+    </filter-mapping>   -->
 
 	<!-- was jndi -->
 	<resource-ref>
