--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -51,6 +51,17 @@
         <url-pattern>/*</url-pattern>  
     </filter-mapping>   -->
 
+	<!--加入Axis2支持 -->
+	<servlet>
+		<servlet-name>AxisServlet</servlet-name>
+		<servlet-class>org.apache.axis2.transport.http.AxisServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AxisServlet</servlet-name>
+		<url-pattern>/services/*</url-pattern>
+	</servlet-mapping>
+
 	<!-- was jndi -->
 	<resource-ref>
 		<res-ref-name>jdbc/sdnsbd</res-ref-name>
