--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ web/META-INF/MANIFEST.MF
 .project
 .settings/.jsdtscope
 *.prefs
+web/.idea/workspace.xml
+web/.idea/inspectionProfiles/profiles_settings.xml
+web/.idea/inspectionProfiles/Project_Default.xml
+web/.idea/workspace.xml
+web/.idea/workspace.xml
+*.xml
+*.xml
+web/.idea/workspace.xml
